--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Home One</title>
+<title>MuseumFun</title>
 
 <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
@@ -26,11 +26,13 @@
 <link rel="stylesheet" href="assets/css/nouislider.pips.css">
 
 <link rel="stylesheet" href="assets/css/main.css">
+
 </head>
 <body>
 <div class="preloader">
 <img class="preloader__image" width="55" src="assets/images/loader.png" alt="">
 </div>
+
 <div class="page-wrapper">
 <header class="main-header">
 <div class="topbar">
@@ -42,11 +44,11 @@
 <a href="#" class="fab fa-pinterest-p"></a>
 <a href="#" class="fab fa-instagram"></a>
 </div>
-<p>Welcome to Agriculture HTML Template</p>
+<p>欢迎来到博乐互动馆</p>
 </div>
 <div class="topbar__right">
 <a href="#"><i class="agrikon-icon-email"></i><span class="__cf_email__" data-cfemail="94faf1f1f0fcf1f8e4d4f7fbf9e4f5faedbaf7fbf9">[email&#160;protected]</span></a>
-<a href="#"><i class="agrikon-icon-clock"></i>Mon - Sat 8:00 - 6:30, Sunday - CLOSED</a>
+<!-- <a href="#"><i class="agrikon-icon-clock"></i>Mon - Sat 8:00 - 6:30, Sunday - CLOSED</a> -->
 </div>
 </div>
 </div>
