--- a/index.html
+++ b/index.html
@@ -30,88 +30,47 @@
 </head>
 <body>
 <div class="preloader">
-<img class="preloader__image" width="55" src="assets/images/loader.png" alt="">
+<img class="preloader__image" width="150" src="assets/images/loader.png" alt="">
 </div>
 
 <div class="page-wrapper">
 <header class="main-header">
-<div class="topbar">
-<div class="container">
-<div class="topbar__left">
-<div class="topbar__social">
-<a href="#" class="fab fa-facebook-square"></a>
-<a href="#" class="fab fa-twitter"></a>
-<a href="#" class="fab fa-pinterest-p"></a>
-<a href="#" class="fab fa-instagram"></a>
-</div>
-<p>欢迎来到博乐互动馆</p>
-</div>
-<div class="topbar__right">
-<a href="#"><i class="agrikon-icon-email"></i><span class="__cf_email__" data-cfemail="94faf1f1f0fcf1f8e4d4f7fbf9e4f5faedbaf7fbf9">[email&#160;protected]</span></a>
-<!-- <a href="#"><i class="agrikon-icon-clock"></i>Mon - Sat 8:00 - 6:30, Sunday - CLOSED</a> -->
-</div>
-</div>
-</div>
+<!-- 主要上边框栏 -->
 <nav class="main-menu">
-<div class="container">
-<div class="logo-box">
-<a href="index.html" aria-label="logo image"><img src="assets/images/logo-dark.png" width="153" alt=""></a>
-<span class="fa fa-bars mobile-nav__toggler"></span>
-</div>
-<ul class="main-menu__list">
-<li class="dropdown">
-<a href="index.html">Home</a>
-<ul>
-<li>
-<a href="index.html">Home One</a>
-</li>
-<li><a href="index-2.html">Home Two</a></li>
-<li class="dropdown">
-<a href="#">Header Styles</a>
-<ul>
-<li><a href="index.html">Header One</a></li>
-<li><a href="index-2.html">Header Two</a></li>
-</ul>
-</li>
-</ul>
-</li>
-<li>
-<a href="about.html">About</a>
-</li>
-<li class="dropdown"><a href="#">Pages</a>
-<ul>
-<li><a href="services.html">Services</a></li>
-<li><a href="service-details.html">Service Details</a></li>
-<li><a href="contact.html">Contact</a></li>
-</ul>
-</li>
-<li class="dropdown">
-<a href="projects.html">Projects</a>
-<ul>
-<li><a href="projects.html">Projects</a></li>
-<li><a href="project-details.html">Projects Details</a></li>
-</ul>
-</li>
-<li class="dropdown"><a href="blog.html">News</a>
-<ul>
-<li><a href="blog.html">News</a></li>
-<li><a href="blog-details.html">News Details</a></li>
-</ul>
-</li>
-</ul>
+  <div class="container">
+  <div class="logo-box">
+    <a href="index.html" aria-label="logo image"><img src="assets/images/logo-dark.png" width="100" alt=""></a>
+    <span class="fa fa-bars mobile-nav__toggler"></span>
+  </div>
 
-<div class="main-header__info">
-<a href="#" class="search-toggler main-header__search-btn"><i class="agrikon-icon-magnifying-glass"></i></a>
-<a class="main-header__cart-btn" href="#"><i class="agrikon-icon-shopping-cart"></i></a>
-<a href="tel:92-666-888-0000" class="main-header__info-phone">
-<i class="agrikon-icon-phone-call"></i>
-<span class="main-header__info-phone-content">
-<span class="main-header__info-phone-text">Call Anytime</span>
-<span class="main-header__info-phone-title">92 666 888 0000</span>
-</span>
-</a>
-</div>
-</div>
+  <ul class="main-menu__list">
+    <li class="dropdown">
+    <a href="index.html">Home</a>
+    </li>
+    <li class="dropdown"><a href="#">Pages</a>
+    <ul>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="service-details.html">Service Details</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+    </li>
+    <li class="dropdown">
+    <a href="projects.html">Projects</a>
+    <ul>
+    <li><a href="projects.html">Projects</a></li>
+    <li><a href="project-details.html">Projects Details</a></li>
+    </ul>
+    </li>
+    <li>
+      <a href="about.html">About</a>
+    </li>
+  </ul>
+
+  <div class="main-header__info">
+  <a href="#" class="search-toggler main-header__search-btn"><i class="agrikon-icon-magnifying-glass"></i></a>
+  <a class="main-header__cart-btn" href="#"><i class="agrikon-icon-shopping-cart"></i></a>
+  </div>
+  </div>
 </nav>
 
 </header>
@@ -139,8 +98,8 @@
 <div class="container">
 <div class="row">
 <div class="col-xl-7 col-lg-7">
-<span class="tagline">Welcome to Agriculture Farm</span>
-<h2><span>Agriculture</span> <br>
+<span class="tagline">欢迎来到博乐交互馆</span>
+<h2><span>博乐</span> <br>
 & Eco Farming</h2>
 <p>There are many of passages of lorem Ipsum, but the majori have <br> suffered alteration
  in some form.</p>
